@@ -15,6 +15,7 @@ Nagios 2.x Change Log
 * Bug fix with not deleting all comments associated with a service
 * Lowered max plugin output length from 348 to 332 chars to run on 64-bit systems without problems
 * Minor fix to p1.pl for embedded Perl interpreter
+* Minor fixes to WAP interface (statuswml CGI)
 * Minor doc updates
 
 
